# slime

./: .gitignore  Cargo.toml  README.md  build_wasm.ps1  build_wasm.sh  index.html
shaders/: blit.wgsl  clear.wgsl  copy_agents.wgsl  diffuse.wgsl  draw.wgsl  slime_sim.wgsl
src/: app.rs  main.rs  pipeline.rs  runner.rs  shader_pipeline.rs
src/pipeline/: blit_pipeline.rs  clear_pipeline.rs  copy_agent_map_pipeline.rs  diffuse_pipeline.rs  render_pipeline.rs  slime_sim_pipeline.rs
