[package]
authors = ["Aaron Housh <dispersias@gmail.com>"]
edition = "2021"
name = "slime"
version = "1.0.0"

[profile.release]
codegen-units = 1
lto = 'thin'
strip = 'symbols'

[dependencies]
async-executor = "1.5"
bytemuck = {version = "1.12", features = ["derive"]}
cgmath = "0.18"
instant = {version = "0.1", features = ["wasm-bindgen"]}
log = "0.4"
pollster = "0.2"
pretty_env_logger = "0.4"
rand = "0.8"
wgpu = "0.14"
winit = "0.27"
